...
                                <rect key="frame" x="276" y="7" width="83" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Save"/>
                                <connections>
                                    <action selector="saveAction:" destination="3QB-Wz-XdE" eventType="touchUpInside" id="m24-oH-9e6"/>
...
                                                <constraint firstAttribute="width" constant="30" id="RyJ-TT-W6u"/>
                                            </constraints>
                                            <state key="normal" title="Button" image="Check"/>
                                            <connections>
                                                <action selector="btnCheckTask_Tapped:" destination="VoW-Um-zcc" eventType="touchUpInside" id="vBX-zZ-gWE"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alarm" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d29-XV-EEn">
                                                    <rect key="frame" x="8" y="11.5" width="45" height="20.5"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                            </constraints>
                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                            <state key="normal" title="+3 Hours">
                                                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                            </state>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="obOne.png" translatesAutoresizingMaskIntoConstraints="NO" id="K5N-OV-EpJ">
                                <rect key="frame" x="-349.5" y="28" width="1074" height="561"/>
                                <constraints>
...
            <objects>
                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="aMf-kV-mZQ" customClass="onboardPageViewController" customModule="checkMate" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="How to" image="Settings" id="hhg-vH-WF6"/>
                    <navigationItem key="navigationItem" title="Reminders" id="y4A-pZ-Hne">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ySs-wf-EJT"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="obTwo.png" translatesAutoresizingMaskIntoConstraints="NO" id="dMy-GG-VkA">
                                <rect key="frame" x="-349.5" y="28" width="1074" height="561"/>
                                <constraints>
...
