...
    case MonDayYrs
    case HrsMin
    case HrsMinSec
}
enum genmOperation: Int {
    case Add = 1
    case Edit = 2
}

class MyGlobals {
    
// MARK: - Initialization
    
...
